--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ html {
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Assistant', sans-serif;
     padding: 2em;
     font-size: 1.25em;
     height: 100%;
@@ -131,9 +131,21 @@ body {
     align-items: center;
     color: #fff;
     line-height: 1.5em;
-    font-size: 1.6em;
-    background-color: #f16059;
+    font-size: 1.5em;
     height: 300px;
+    padding: 0.5em;
+}
+
+.div-1 {
+    background-color: #788AA3;
+}
+
+.div-2 {
+    background-color: #C83E4D;
+}
+
+.div-3 {
+    background-color: #880D1E;
 }
 
 
